2.1 Cleanup Code